# uva10191

./: CMakeLists.txt  README.md  main.cpp  test.cpp
